Fix package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "microserviceA",
+  "name": "microservice-a",
   "type": "module",
   "scripts": {
     "dev": "tsx watch src/index.ts"
