--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.13.8",
-    "hono": "^4.7.2"
+    "hono": "^4.7.2",
+    "pokedex-promise-v2": "^4.2.1"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
